--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -255,6 +255,9 @@
             margin-top: 10px;
         }
     }
+    p {
+        text-align:justify;
+    }
 }
 .media {
     margin-bottom: 30px;
