--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -157,12 +157,15 @@ button {
         }
     }
 }
+.btn:focus, .btn-primary:focus, .btn-danger:focus {
+    @extend %removeFocusOutline;
+}
 .btn-primary {
     background-color:   $red;
     border-color:       $red;
     @include transition(background-color, 0.5s);
 }
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
+.btn-primary:hover, .btn-primary:active, .btn-primary.active {
     background-color:   lighten($red, 13%);
     border-color:       lighten($red, 13%);
     @include transition(background-color, 0.5s);
@@ -178,7 +181,7 @@ button {
         margin-left: -5px;
     }
 }
-.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active {
+.btn-danger:hover, .btn-danger:active, .btn-danger.active {
     background-color:   lighten($red, 13%);
     border-color:       lighten($red, 13%);
     @include transition(background-color, 0.5s);
@@ -188,6 +191,11 @@ button {
     background-color:   $info;
     border-color:       $info;
     @include transition(background-color, 0.5s);
+
+    &:focus {
+        @extend %removeFocusOutline;
+        border: 2px dotted #444 !important;
+    }
 }
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active {
     background-color:   lighten($info, 13%);
