--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -523,51 +523,52 @@ p {
   border-top: 0;
   box-shadow: none !important;
   padding-bottom: 20px;
+  height: 220px !important;
 }
 
-/* line 117, ../scss/_navbar.scss */
+/* line 118, ../scss/_navbar.scss */
 #nav-row {
   height: 50px;
   z-index: 9999;
   position: fixed;
 }
 
-/* line 127, ../scss/_navbar.scss */
+/* line 128, ../scss/_navbar.scss */
 #nav-below .btn {
   margin-top: 20px;
 }
-/* line 130, ../scss/_navbar.scss */
+/* line 131, ../scss/_navbar.scss */
 #nav-below .btn-primary {
   margin-top: 10px;
 }
-/* line 133, ../scss/_navbar.scss */
+/* line 134, ../scss/_navbar.scss */
 #nav-below span {
   line-height: 17px;
 }
 
-/* line 140, ../scss/_navbar.scss */
+/* line 141, ../scss/_navbar.scss */
 .nav-previous {
   float: left;
   margin-right: 10px;
 }
 
-/* line 147, ../scss/_navbar.scss */
+/* line 148, ../scss/_navbar.scss */
 button {
   margin-right: 15px !important;
 }
 
-/* line 151, ../scss/_navbar.scss */
+/* line 152, ../scss/_navbar.scss */
 .btn a {
   text-transform: uppercase;
   color: white;
 }
-/* line 154, ../scss/_navbar.scss */
+/* line 155, ../scss/_navbar.scss */
 .btn a:hover {
   color: white;
   text-decoration: none;
 }
 
-/* line 163, ../scss/_navbar.scss */
+/* line 164, ../scss/_navbar.scss */
 .btn-primary {
   background-color: #b12e4f;
   border-color: #b12e4f;
@@ -577,7 +578,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 168, ../scss/_navbar.scss */
+/* line 169, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:active, .btn-primary.active {
   background-color: #d15070;
   border-color: #d15070;
@@ -587,7 +588,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 173, ../scss/_navbar.scss */
+/* line 174, ../scss/_navbar.scss */
 .btn-danger {
   background-color: #b12e4f;
   border-color: #b12e4f;
@@ -596,14 +597,14 @@ button {
   -o-transition: background-color, 0.5s;
   transition: background-color, 0.5s;
 }
-/* line 178, ../scss/_navbar.scss */
+/* line 179, ../scss/_navbar.scss */
 .btn-danger .fa-arrow-left {
   line-height: 19px;
   margin-right: 5px;
   margin-left: -5px;
 }
 
-/* line 184, ../scss/_navbar.scss */
+/* line 185, ../scss/_navbar.scss */
 .btn-danger:hover, .btn-danger:active, .btn-danger.active {
   background-color: #d15070;
   border-color: #d15070;
@@ -613,7 +614,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 190, ../scss/_navbar.scss */
+/* line 191, ../scss/_navbar.scss */
 .btn-info {
   background-color: #555555;
   border-color: #555555;
@@ -622,12 +623,12 @@ button {
   -o-transition: background-color, 0.5s;
   transition: background-color, 0.5s;
 }
-/* line 195, ../scss/_navbar.scss */
+/* line 196, ../scss/_navbar.scss */
 .btn-info:focus {
   border: 2px dotted #444 !important;
 }
 
-/* line 200, ../scss/_navbar.scss */
+/* line 201, ../scss/_navbar.scss */
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active {
   background-color: #767676;
   border-color: #767676;
@@ -637,32 +638,32 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 205, ../scss/_navbar.scss */
+/* line 206, ../scss/_navbar.scss */
 .btn-block {
   margin-bottom: 20px;
   color: black;
   font-size: 100%;
 }
 
-/* line 213, ../scss/_navbar.scss */
+/* line 214, ../scss/_navbar.scss */
 .affix {
   top: 0;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 216, ../scss/_navbar.scss */
+  /* line 217, ../scss/_navbar.scss */
   .affix-top {
     position: fixed;
     top: 0;
   }
 }
 
-/* line 224, ../scss/_navbar.scss */
+/* line 225, ../scss/_navbar.scss */
 .single .affix, .single .affix-top {
   position: fixed;
 }
 @media only all and (max-width: 767px) {
-  /* line 224, ../scss/_navbar.scss */
+  /* line 225, ../scss/_navbar.scss */
   .single .affix, .single .affix-top {
     position: static;
   }
