--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -112,7 +112,7 @@
     border-top: 0;
     box-shadow: none !important;
     padding-bottom: 20px;
-    height: 220px;
+    height: 220px !important;
 }
 
 #nav-row{
