--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -193,6 +193,9 @@
     label {
         font-size: 16px;
     }
+    textarea {
+        resize: none !important;
+    }
 }
 .form-control {
     color: #FFFFFF;
