--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -269,6 +269,7 @@
 .credits {
     overflow-y: hidden;
     overflow-x: hidden;
+    padding-top: 15px;
     td {
         padding: 3px !important;
     }
